<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Final">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/download"
                app:civ_border_width="1dp"
                app:civ_border_color="#FF000000"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/title"
                    android:gravity="center|center_vertical"
                    android:textSize="30sp"
                    android:fontFamily="@font/raleway_extrabold"
                    android:textColor="@color/mainText"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/sumar"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/textAlt"
            android:fontFamily="@font/raleway_semibold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_optiune"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>

            <TextView
                android:id="@+id/txtViewFinalOption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            android:textColor="@color/textAlt"
            android:fontFamily="@font/raleway_semibold"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_data"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>

            <TextView
                android:id="@+id/txtViewFinalData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_ora"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>

            <TextView
                android:id="@+id/txtViewFinalHour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nume"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>

            <EditText
                android:id="@+id/edtTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="ex. Gheorghe Pop"
                android:gravity="center"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.15"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefon"
                android:textSize="20sp"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>

            <EditText
                android:id="@+id/edtTextPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:hint="număr telefon"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/textAlt"
                android:fontFamily="@font/raleway_semibold"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/btnFinish"
            android:background="@drawable/btn_design"
            android:fontFamily="@font/raleway_semibold"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>